<resources>
    <string name="app_name">BetterLife</string>
    <!--registro-->
    <string name="CrearcuentaTXT">Crear cuenta</string>
    <string name="NombreET">Nombre</string>
    <string name="GeneroET">Genero</string>
    <string name="EmailET">Email</string>
    <string name="ContraseñaET">Contraseña</string>
    <string name="ConfirmContraseñaET">Confirmar contraseña</string>
    <string name="Crear">Crear cuenta</string>
    <string name="SigninTXT">¿Ya tienes una cuenta?</string>

    <!--Inicio de sesión-->
    <string name="Iniciar">Inicar sesión</string>
    <string name="IniciarCuentaTXT">Iniciar Sesión</string>
    <string name="SingupTXT">¿No tienes una cuenta?</string>
    <string name="SingupTXT2">Registro</string>
</resources>