<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/caminohuella"

    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/CrearcuentaTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#58C8AD"/>
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/ic_user"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/username"
                android:hint="@string/NombreET"
                android:inputType="textPersonName|textCapWords"
                android:padding="15dp"
                android:drawablePadding="10dp"
                android:backgroundTint="#222232"
                android:textColorHint="#FFFFFF"

                android:drawableStart="@drawable/ic_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/usergender"
                android:hint="@string/GeneroET"
                android:inputType="textPersonName|textCapWords"
                android:padding="15dp"
                android:drawablePadding="10dp"
                android:backgroundTint="#222232"
                android:textColorHint="#CCCCCC"
                android:drawableStart="@drawable/ic_genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/useremail"
                android:hint="@string/EmailET"
                android:inputType="textPersonName|textCapWords"
                android:padding="15dp"
                android:drawablePadding="10dp"
                android:backgroundTint="#222232"
                android:textColor="#cccccc"
                android:textColorHint="#cccccc"
                android:drawableStart="@drawable/ic_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#cccccc"
            app:hintEnabled="false">
            <EditText
                android:id="@+id/password"
                android:hint="@string/ContraseñaET"
                android:inputType="textPersonName|textCapWords"
                android:padding="15dp"
                android:drawablePadding="10dp"
                android:backgroundTint="#222232"
                android:textColorHint="#CCCCCC"
                android:drawableStart="@drawable/ic_lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#cccccc"
            app:hintEnabled="false">
            <EditText
                android:id="@+id/repassword"
                android:hint="@string/ConfirmContraseñaET"
                android:inputType="textPersonName|textCapWords"
                android:padding="15dp"
                android:drawablePadding="10dp"
                android:backgroundTint="#222232"
                android:textColorHint="#CCCCCC"
                android:drawableStart="@drawable/ic_lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnsingup"
            android:text="@string/Crear"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:backgroundTint="#58C8AD"
            android:textStyle="bold"
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="60dp"/>
        <TextView
            android:id="@+id/Txtsignin"
            android:text="@string/SigninTXT"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btnsingin"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:backgroundTint="#3BEDC2"
            android:text="@string/Iniciar"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.LinearLayoutCompat>




</ScrollView>