<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/caminohuella"
    tools:context=".LoginActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/close1"
            android:layout_width="35dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/close" />

        <TextView
            android:text="@string/IniciarCuentaTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#58C8AD"/>
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/ic_user"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/username1"
                android:hint="@string/NombreET"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:backgroundTint="#222232"
                android:textColorHint="#FFFFFF"

                android:drawableStart="@drawable/ic_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#cccccc"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#222232"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:hint="@string/ContraseñaET"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:textColorHint="#CCCCCC" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnsingin1"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:backgroundTint="#58C8AD"
            android:text="@string/Iniciar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/Txtsignin"
            android:text="@string/SingupTXT"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btnsingup1"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:backgroundTint="#58C8AD"
            android:text="@string/SingupTXT2"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>




</ScrollView>